add validation for realty form

--- a/src/app/realty/realty-add/realty-add.component.html
+++ b/src/app/realty/realty-add/realty-add.component.html
@@ -33,7 +33,8 @@
 
       <!-- CONTENT -->
       <div class="content">
-        <app-realty-form (onSubmit)="save($event)" (onCancel)="onCancel()"></app-realty-form>
+        <app-realty-form (onSubmit)="save($event)" (onCancel)="onCancel()"
+                         [errors]="validationErrors"></app-realty-form>
       </div>
     </div>
   </div>
