--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -14,9 +14,12 @@
 
                 <mat-form-field>
                     <input matInput placeholder="Name" formControlName="username">
-                    <mat-error>
+                  <mat-error *ngIf="registerForm.get('username').hasError('required')">
                         Name is required
                     </mat-error>
+                  <mat-error *ngIf="registerForm.get('username').hasError('invalid')">
+                    {{errors?.username}}
+                  </mat-error>
                 </mat-form-field>
 
                 <mat-form-field>
@@ -27,6 +30,9 @@
                     <mat-error *ngIf="registerForm.get('email').hasError('pattern')">
                         Please enter a valid email address
                     </mat-error>
+                  <mat-error *ngIf="registerForm.get('email').hasError('invalid')">
+                    {{errors?.email}}
+                  </mat-error>
                 </mat-form-field>
 
               <mat-form-field>
@@ -37,6 +43,9 @@
                 <mat-error *ngIf="registerForm.get('phone').hasError('pattern')">
                   Phone number is invalid
                 </mat-error>
+                <mat-error *ngIf="registerForm.get('phone').hasError('invalid')">
+                  {{errors?.phone}}
+                </mat-error>
               </mat-form-field>
 
                 <mat-form-field>
@@ -46,6 +55,9 @@
                     </mat-error>
                   <mat-error *ngIf="registerForm.get('password').hasError('minlength')">
                     Password must contain 6 symbols
+                  </mat-error>
+                  <mat-error *ngIf="registerForm.get('password').hasError('invalid')">
+                    {{errors?.password}}
                   </mat-error>
                 </mat-form-field>
 
