--- a/src/app/realty/realty-form/realty-form.component.html
+++ b/src/app/realty/realty-form/realty-form.component.html
@@ -1,4 +1,4 @@
-<form name="productForm" class="mt-20 mb-20" [formGroup]="realtyForm" fxLayout="column"
+<form name="productForm" class="mt-20 mb-20" [formGroup]="realtyForm" novalidate fxLayout="column"
       (ngSubmit)="submit(realtyForm.value)">
 
   <div fxLayout="row" fxLayoutAlign="space-around center" fxLayout.lt-sm="column" fxLayoutAlign.lt-sm="stretch">
@@ -248,9 +248,13 @@
 
   <div fxLayout="row" fxLayoutAlign="space-around center" fxFlex="1 0 auto" fxLayout.lt-sm="column"
        fxLayoutAlign.lt-sm="stretch">
-    <file-drop dropZoneLabel="Drop images here" fxFlex="90" browseBtnClassName="browse-btn"
-               (onFileDrop)="onFileDropped($event.files)">
+    <file-drop dropZoneLabel="Drop images here" fxFlex="90" browseBtnClassName="browse-btn" multiple="true"
+               (onFileDrop)="onFileDropped($event)">
     </file-drop>
+  </div>
+  <div fxLayout="row wrap" class="image-preview-container mt-20 mb-20" fxFlex="80" fxLayoutAlign="center"
+       *ngIf="images.length > 0">
+    <img class="image-preview mr-20 ml-20 mb-20" *ngFor="let image of images" [src]="image" alt="">
   </div>
   <div fxLayout="row" fxLayoutAlign="space-around center" fxFlex="1 0 auto" fxFlex.lt-sm="100" class="mt-20">
     <button mat-raised-button color="accent" class="submit-button" type="submit" [disabled]="realtyForm.invalid">Save
