--- a/src/app/profile/tabs/about/about.component.html
+++ b/src/app/profile/tabs/about/about.component.html
@@ -22,6 +22,10 @@
                     <div class="title">Email</div>
                     <div class="info">{{profile?.email}}</div>
                 </div>
+              <div class="info-line">
+                <div class="title">Phone number</div>
+                <div class="info">{{profile?.phone}}</div>
+              </div>
             </div>
         </div>
     </div>
