--- a/src/app/realty/realty-form/realty-form.component.html
+++ b/src/app/realty/realty-form/realty-form.component.html
@@ -243,6 +243,9 @@
                   placeholder="Realty Description"
                   rows="5">
         </textarea>
+      <mat-error *ngIf="realtyForm.get('description').hasError('invalid')">
+        {{errors?.description}}
+      </mat-error>
     </mat-form-field>
   </div>
 
@@ -254,7 +257,10 @@
   </div>
   <div fxLayout="row wrap" class="image-preview-container mt-20 mb-20" fxFlex="80" fxLayoutAlign="center"
        *ngIf="images.length > 0">
-    <img class="image-preview mr-20 ml-20 mb-20" *ngFor="let image of images" [src]="image" alt="">
+    <div *ngFor="let image of images" class="image-list">
+      <img class="image-preview mr-20 ml-20 mb-20" [src]="image" alt="">
+      <button class="remove-img" (click)="removeImage(image)">X</button>
+    </div>
   </div>
   <div fxLayout="row" fxLayoutAlign="space-around center" fxFlex="1 0 auto" fxFlex.lt-sm="100" class="mt-20">
     <button mat-raised-button color="accent" class="submit-button" type="submit" [disabled]="realtyForm.invalid">Save
