--- a/src/app/realty/realty-list.component.html
+++ b/src/app/realty/realty-list.component.html
@@ -4,9 +4,11 @@
     <mat-icon color="white" class="hovered" routerLink="/realty/add" matTooltip="Add realty">add</mat-icon>
   </div>
   <div fxLayoutAlign="space-between">
-    <div class="realty-container" fxLayout="row wrap" class="card"  fxLayoutAlign.xs="center" >
+    <div class="realty-container card" fxLayout="row wrap" fxLayoutAlign.xs="center" infiniteScroll
+         [infiniteScrollDistance]="1"
+         [infiniteScrollThrottle]="50"
+         (scrolled)="loadMore()">
       <div class="fuse-card mt-20 mb-20 mr-20 ml-20" *ngFor="let realty of realty" >
-
         <img class="hovered" src="assets/images/cards/card1.jpg" [routerLink]="['details',realty.id]">
 
         <div class="p-16" [routerLink]="['details',realty.id]">
@@ -19,9 +21,9 @@
         <mat-divider></mat-divider>
         <div class="p-16" fxLayout="row" fxLayoutAlign="space-between center">
           <div class="price ">{{realty.price}} {{realty.currency}}</div>
-          <fa-icon [icon]="['fas', 'home']" size="2x" *ngIf="realty.resourcetype == 'Apartment'"
+          <fa-icon [icon]="['fas', 'building']" size="2x" *ngIf="realty.resourcetype == 'Apartment'"
                    matTooltip="Apartment"></fa-icon>
-          <fa-icon [icon]="['fas', 'building']" size="2x" *ngIf="realty.resourcetype == 'Building'"
+          <fa-icon [icon]="['fas', 'home']" size="2x" *ngIf="realty.resourcetype == 'Building'"
                    matTooltip="Building"></fa-icon>
           <mat-icon color="orange" *ngIf="!realty.liked">favorite_border</mat-icon>
           <mat-icon color="orange" *ngIf="realty.liked">favorite</mat-icon>
@@ -29,37 +31,6 @@
 
       </div>
     </div>
-
-    <div class="realty-filter mt-20 fuse-card" fxLayout="column">
-      <div class="text-center mat-primary-bg" fxLayoutAlign="center center" fxLayout="space-between">Filter</div>
-      <form [formGroup]="searchForm">
-        <div class="form-control" fxLayout="row" fxLayoutAlign="space-between center">
-          <span>Rooms count: </span>
-          <mat-form-field fxFlex="60" fxFlex.lt-sm="100" fxLayoutAlign = "center" fxLayout="column" >
-            <mat-select formControlName="rooms" placeholder="Select rooms count">
-              <mat-option >None</mat-option>
-              <mat-option [value]="1">1</mat-option>
-              <mat-option [value]="2">2</mat-option>
-              <mat-option [value]="3">3</mat-option>
-              <mat-option [value]="4">4</mat-option>
-              <mat-option [value]="5">5</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-        <div class="form-control" fxLayout="row" fxLayoutAlign="space-between center">
-          <span>Price: </span>
-          <mat-form-field fxFlex="60" fxFlex.lt-sm="100" fxLayoutAlign = "center" fxLayout="column" >
-            <input matInput type="number" min="1" max="10000000" formControlName="price" >
-          </mat-form-field>
-        </div>
-        <div class="form-control mb-20" fxLayout="row" fxLayoutAlign="space-around center">
-            <button mat-raised-button color="accent" (click)="resetFilter()">Reset</button>
-        </div>
-
-      </form>
-
-
-    </div>
+    <app-realty-filter [searchForm]="searchForm" (onReset)="resetFilter()"></app-realty-filter>
   </div>
-
 </div>
