--- a/src/app/realty/realty-list.component.scss
+++ b/src/app/realty/realty-list.component.scss
@@ -1,6 +1,5 @@
 
-
-  .realty-container .title:hover{
+.title:hover {
     color:orange;
   }
 
@@ -12,22 +11,6 @@
   .description{
     height: 50px;
     overflow: hidden;
-  }
-
-  .realty-filter{
-    height: 100%;
-    margin-right: 20px;
-    float: right;
-  }
-
-  .realty-filter > div{
-    height: 40px;
-    margin-bottom: 20px;
-  }
-
-  .form-control{
-    padding-right: 20px;
-    padding-left: 20px;
   }
 
   .mat-form-field-wrapper{
@@ -99,8 +82,4 @@
     border-top: 3px solid #8F0808;
   }
 
-  @media only screen and (max-width: 768px){
-    .realty-filter{
-      display: none!important;
-    }
-  }
+
