Add realty filter for mobile devices and spinner for loading

--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -75,7 +75,7 @@
                 <button mat-raised-button color="accent" class="submit-button" aria-label="CREATE AN ACCOUNT"
                         [disabled]="registerForm.invalid">
                     CREATE AN ACCOUNT
-                  <ngx-spinner></ngx-spinner>
+                  <mat-spinner diameter="20" *ngIf="showSpinner" class="btn-spinner"></mat-spinner>
                 </button>
 
             </form>
