--- a/src/app/realty/realty-details/realty-details.component.html
+++ b/src/app/realty/realty-details/realty-details.component.html
@@ -50,7 +50,7 @@
     <!-- / HEADER -->
 
     <!-- CONTENT CARD -->
-    <div class="content-card mat-white-bg">
+    <div class="content-card mat-white-bg pt-20">
 
       <!-- CONTENT -->
       <div class="content">
@@ -63,7 +63,7 @@
             <div class="price">{{realty.price}} {{realty.currency}}</div>
             <div class="area"> Area {{realty.area}} m<sup>2</sup></div>
             <div>
-              <a [href]="realty.link">Original link</a>
+              <a [href]="realty.link">Original realty</a>
             </div>
             <div fxLayout="row" fxLayoutAlign="space-around center" fxLayout.lt-sm="column"
                  class="realty-property share-btn">
