--- a/src/app/realty/realty-form/realty-form.component.scss
+++ b/src/app/realty/realty-form/realty-form.component.scss
@@ -11,6 +11,12 @@
   position: relative;
 }
 
+.image-spinner {
+  position: absolute;
+  top: 30px;
+  left: 50px;
+}
+
 .remove-img {
   position: absolute;
   right: 20px;
