--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <router-outlet></router-outlet>
 <notifier-container></notifier-container>
+<mat-spinner class="spinner" *ngIf="spinnerService.isLoading | async"></mat-spinner>
