--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,3 +2,11 @@
   width: 100%;
   height: 100%;
 }
+
+.spinner {
+  position: absolute;
+  left: 50%;
+  margin-left: -50px;
+  top: 50%;
+  margin-top: -50px;
+}
