--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -40,6 +40,7 @@
                 <button mat-raised-button color="accent" class="submit-button" aria-label="LOG IN"
                         [disabled]="loginForm.invalid">
                     LOGIN
+                  <mat-spinner diameter="20" *ngIf="showSpinner" class="btn-spinner"></mat-spinner>
                 </button>
 
             </form>
