--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -9,6 +9,7 @@
           <div class="profile-picture">
             <img class="profile-image avatar huge" [src]="profile?.image"
                  [@animate]="{value:'*',params:{delay:'50ms',scale:'0.2'}}">
+            <mat-spinner diameter="30" color="accent" class="profile-image-spinner" *ngIf="showSpinner"></mat-spinner>
             <mat-icon class="change-avatar" color="white" (click)="avatar.click()">camera_enhance</mat-icon>
           </div>
             <div class="name" [@animate]="{value:'*',params:{delay:'100ms',x:'-25px'}}">{{profile?.firstName}} {{profile?.lastName}}
