--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -57,7 +57,7 @@
 
   .change-avatar{
     position: absolute;
-    left:35px;
+    left: 40px;
     bottom: 4px;
     color:#fff;
     visibility: hidden;
@@ -78,5 +78,11 @@
     border-radius:50%;
     position: relative;
     margin-right: 20px;
+  }
+
+  .profile-image-spinner {
+    position: absolute;
+    top: 35px;
+    left: 35px;
   }
 }
