--- a/src/app/realty/realty-form/realty-form.component.html
+++ b/src/app/realty/realty-form/realty-form.component.html
@@ -258,8 +258,9 @@
   <div fxLayout="row wrap" class="image-preview-container mt-20 mb-20" fxFlex="80" fxLayoutAlign="center"
        *ngIf="images.length > 0">
     <div *ngFor="let image of images" class="image-list">
-      <img class="image-preview mr-20 ml-20 mb-20" [src]="image" alt="">
+      <img class="image-preview mr-20 ml-20 mb-20" [src]="image.image" alt="">
       <button class="remove-img" (click)="removeImage(image)">X</button>
+      <mat-spinner diameter="40" color="accent" class="image-spinner" *ngIf="!image.isLoaded"></mat-spinner>
     </div>
   </div>
   <div fxLayout="row" fxLayoutAlign="space-around center" fxFlex="1 0 auto" fxFlex.lt-sm="100" class="mt-20">
