implement localization for auth module

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -8,28 +8,28 @@
                 <img src="assets/images/logos/fuse.svg">
             </div>
 
-            <div class="title">RECOVER YOUR PASSWORD</div>
+            <div class="title">  {{'auth.forgotPassword.recoverPassword' | translate}}</div>
 
             <form name="forgotPasswordForm" [formGroup]="forgotPasswordForm" novalidate>
 
                 <mat-form-field>
                     <input matInput placeholder="Email" formControlName="email">
                     <mat-error *ngIf="forgotPasswordForm.get('email').hasError('required')">
-                        Email is required
+                        Email {{'validation.required' | translate}}
                     </mat-error>
                     <mat-error *ngIf="forgotPasswordForm.get('email').hasError('email')">
-                        Please enter a valid email address
+                      {{'validation.emailAddress' | translate}}
                     </mat-error>
                 </mat-form-field>
 
                 <button mat-raised-button class="submit-button" color="accent"
                         aria-label="SEND RESET LINK" [disabled]="forgotPasswordForm.invalid">
-                    SEND RESET LINK
+                    {{'auth.forgotPassword.sendResetLink' | translate}}
                 </button>
             </form>
 
             <div class="login" fxLayout="row" fxLayoutAlign="center center">
-                <a class="link" [routerLink]="'/sign-in'">Go back to login</a>
+                <a class="link" [routerLink]="'/sign-in'">{{'auth.forgotPassword.backToLogin' | translate}}</a>
             </div>
 
         </div>
