--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -8,58 +8,58 @@
                 <img src="assets/images/logos/fuse.svg">
             </div>
 
-            <div class="title">LOGIN TO YOUR ACCOUNT</div>
+            <div class="title">{{ 'auth.signIn.title' | translate }}</div>
 
             <form name="loginForm" [formGroup]="loginForm" novalidate (ngSubmit)="signIn(loginForm.value)">
 
                 <mat-form-field>
-                    <input matInput placeholder="Username" formControlName="username">
+                    <input matInput [placeholder]="'auth.fields.userName' | translate" formControlName="username">
                     <mat-error *ngIf="loginForm.get('username').hasError('required')">
-                        User name is required
+                      {{'auth.fields.userName' | translate }} {{'validation.required' | translate}}
                     </mat-error>
                 </mat-form-field>
 
                 <mat-form-field>
-                    <input matInput type="password" placeholder="Password" formControlName="password">
+                    <input matInput type="password" [placeholder]="'auth.fields.password' | translate" formControlName="password">
                     <mat-error>
-                        Password is required
+                        {{'auth.fields.password' | translate}} {{'validation.required' | translate}}
                     </mat-error>
                 </mat-form-field>
 
                 <div class="remember-forgot-password" fxLayout="row" fxLayout.xs="column"
                      fxLayoutAlign="space-between center">
                     <mat-checkbox class="remember-me" aria-label="Remember Me">
-                        Remember Me
+                        {{'auth.signIn.rememberMe' | translate}}
                     </mat-checkbox>
 
                     <a class="forgot-password" [routerLink]="'/forgot-password'">
-                        Forgot Password?
+                        {{'auth.signIn.forgotPassword' | translate}}?
                     </a>
                 </div>
 
                 <button mat-raised-button color="accent" class="submit-button" aria-label="LOG IN"
                         [disabled]="loginForm.invalid">
-                    LOGIN
+                    {{'auth.signIn.login' | translate}}
                   <mat-spinner diameter="20" *ngIf="showSpinner" class="btn-spinner"></mat-spinner>
                 </button>
 
             </form>
 
             <div class="separator">
-                <span class="text">OR</span>
+                <span class="text">{{'auth.signIn.or' | translate}}</span>
             </div>
 
             <button mat-raised-button class="google">
-                Log in with Google
+                {{'auth.signIn.loginWith' | translate}} Google
             </button>
 
             <button mat-raised-button class="facebook">
-                Log in with Facebook
+              {{'auth.signIn.loginWith' | translate}} Facebook
             </button>
 
             <div class="register" fxLayout="column" fxLayoutAlign="center center">
-                <span class="text">Don't have an account?</span>
-                <a class="link" [routerLink]="'/sign-up'">Create an account</a>
+                <span class="text">{{'auth.signIn.noAccount' | translate}}?</span>
+                <a class="link" [routerLink]="'/sign-up'">{{'auth.signIn.createAccount' | translate}}</a>
             </div>
 
         </div>
