--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -8,14 +8,14 @@
                 <img src="assets/images/logos/fuse.svg">
             </div>
 
-            <div class="title">CREATE AN ACCOUNT</div>
+            <div class="title">{{'auth.signIn.createAccount' | translate}}</div>
 
             <form name="registerForm" [formGroup]="registerForm" (ngSubmit)="signUp(registerForm.value)" novalidate>
 
                 <mat-form-field>
-                    <input matInput placeholder="Name" formControlName="username">
+                    <input matInput [placeholder]="'auth.fields.userName' | translate" formControlName="username">
                   <mat-error *ngIf="registerForm.get('username').hasError('required')">
-                        Name is required
+                    {{'auth.fields.userName' | translate }} {{'validation.required' | translate}}
                     </mat-error>
                   <mat-error *ngIf="registerForm.get('username').hasError('invalid')">
                     {{errors?.username}}
@@ -25,10 +25,10 @@
                 <mat-form-field>
                     <input matInput placeholder="Email" formControlName="email">
                     <mat-error *ngIf="registerForm.get('email').hasError('required')">
-                        Email is required
+                        Email {{'validation.required' | translate}}
                     </mat-error>
                     <mat-error *ngIf="registerForm.get('email').hasError('pattern')">
-                        Please enter a valid email address
+                        {{'validation.emailAddress' | translate}}
                     </mat-error>
                   <mat-error *ngIf="registerForm.get('email').hasError('invalid')">
                     {{errors?.email}}
@@ -36,12 +36,12 @@
                 </mat-form-field>
 
               <mat-form-field>
-                <input matInput placeholder="Phone number" formControlName="phone">
+                <input matInput [placeholder]="'auth.fields.phone' | translate" formControlName="phone">
                 <mat-error *ngIf="registerForm.get('phone').hasError('required')">
-                  Phone number is required
+                  {{'auth.fields.phone' | translate}} {{'validation.required' | translate}}
                 </mat-error>
                 <mat-error *ngIf="registerForm.get('phone').hasError('pattern')">
-                  Phone number is invalid
+                  {{'auth.fields.phone' | translate}} {{'validation.invalid' | translate}}
                 </mat-error>
                 <mat-error *ngIf="registerForm.get('phone').hasError('invalid')">
                   {{errors?.phone}}
@@ -49,12 +49,12 @@
               </mat-form-field>
 
                 <mat-form-field>
-                    <input matInput type="password" placeholder="Password" formControlName="password">
+                    <input matInput type="password" [placeholder]="'auth.fields.password' | translate" formControlName="password">
                     <mat-error *ngIf="registerForm.get('password').hasError('required')">
-                        Password is required
+                      {{'auth.fields.password' | translate}} {{'validation.required' | translate}}
                     </mat-error>
-                  <mat-error *ngIf="registerForm.get('password').hasError('minlength')">
-                    Password must contain 6 symbols
+                  <mat-error *ngIf="registerForm.get('password').hasError('minlength')" >
+                    {{'auth.fields.password' | translate}} {{'validation.minLength' | translate }}
                   </mat-error>
                   <mat-error *ngIf="registerForm.get('password').hasError('invalid')">
                     {{errors?.password}}
@@ -62,27 +62,27 @@
                 </mat-form-field>
 
                 <mat-form-field>
-                    <input matInput type="password" placeholder="Password (Confirm)" formControlName="passwordConfirm">
+                    <input matInput type="password" [placeholder]="'auth.fields.confirmPassword' | translate" formControlName="passwordConfirm">
                     <mat-error *ngIf="registerForm.get('passwordConfirm').hasError('required')">
-                        Password confirmation is required
+                        Password confirmation {{'validation.required' | translate}}
                     </mat-error>
                     <mat-error *ngIf="!registerForm.get('passwordConfirm').hasError('required') &&
                                        registerForm.get('passwordConfirm').hasError('passwordsNotMatching')">
-                        Passwords must match
+                        {{'auth.fields.passwords' | translate}} {{'auth.validation.match'}}
                     </mat-error>
                 </mat-form-field>
 
                 <button mat-raised-button color="accent" class="submit-button" aria-label="CREATE AN ACCOUNT"
                         [disabled]="registerForm.invalid">
-                    CREATE AN ACCOUNT
+                  {{'auth.signIn.createAccount' | translate}}
                   <mat-spinner diameter="20" *ngIf="showSpinner" class="btn-spinner"></mat-spinner>
                 </button>
 
             </form>
 
             <div class="register" fxLayout="column" fxLayoutAlign="center center">
-                <span class="text">Already have an account?</span>
-                <a class="link" [routerLink]="'/sign-in'">Login</a>
+                <span class="text">{{'auth.signUp.haveAccount' | translate}} ?</span>
+                <a class="link" [routerLink]="'/sign-in'">{{'auth.signIn.login' | translate}}</a>
             </div>
 
         </div>
