--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -38,29 +38,27 @@
 
                 <button mat-menu-item [routerLink]="['/profile']">
                     <mat-icon>account_circle</mat-icon>
-                    <span>My Profile</span>
+                    <span>{{'layout.toolbar.menu.profile' | translate}}</span>
                 </button>
 
                 <button mat-menu-item [routerLink]="['/realty']">
                     <mat-icon>home</mat-icon>
-                    <span>Realty</span>
+                    <span>{{'layout.toolbar.menu.realty' | translate}}</span>
                 </button>
 
               <button mat-menu-item [routerLink]="['/realty/favorite']">
                 <mat-icon>favorite</mat-icon>
-                <span>Favorite Realty</span>
+                <span>{{'layout.toolbar.menu.favoriteRealty' | translate}}</span>
               </button>
 
               <button mat-menu-item class="" (click)="logout()">
                     <mat-icon>exit_to_app</mat-icon>
-                    <span>Logout</span>
+                    <span>{{'layout.toolbar.menu.logout' | translate}}</span>
                 </button>
 
             </mat-menu>
 
             <div class="toolbar-separator"></div>
-
-<!--            <fuse-search-bar (input)="search($event)"></fuse-search-bar>-->
 
             <div class="toolbar-separator"></div>
 
@@ -91,13 +89,6 @@
 <!--            </mat-menu>-->
 
             <div class="toolbar-separator" fxHide fxShow.gt-xs></div>
-
-<!--            <button mat-icon-button fxHide.gt-md-->
-<!--                    class="chat-panel-toggle-button"-->
-<!--                    (click)="toggleSidebarOpen('chatPanel')"-->
-<!--                    aria-label="Toggle chat panel">-->
-<!--                <mat-icon class="icon">chat</mat-icon>-->
-<!--            </button>-->
 
             <div class="toolbar-separator" *ngIf="!hiddenNavbar && rightNavbar" fxHide fxShow.gt-xs></div>
 
